--- a/02-Data-basics.Rmd
+++ b/02-Data-basics.Rmd
@@ -3,6 +3,8 @@ title: "Data Basics"
 output: html_notebook
 ---
 
+<!-- This file by Charlotte Wickham is licensed under a Creative Commons Attribution 4.0 International License. -->
+
 ```{r setup}
 library(tidyverse)
 library(haven)
