--- a/03-Visualize-Data.Rmd
+++ b/03-Visualize-Data.Rmd
@@ -3,6 +3,8 @@ title: "Visualize Data"
 output: html_document
 ---
 
+<!-- This file by RStudio is taken from https://github.com/rstudio/master-the-tidyverse and is licensed under a Creative Commons Attribution 4.0 International License. -->
+
 ```{r setup}
 library(tidyverse)
 ```
