--- a/04-Transform-data.Rmd
+++ b/04-Transform-data.Rmd
@@ -3,6 +3,8 @@ title: "Transform Data"
 output: html_notebook
 ---
 
+<!-- This file by Charlotte Wickham is licensed under a Creative Commons Attribution 4.0 International License, adapted from the orignal work at https://github.com/rstudio/master-the-tidyverse by RStudio. -->
+
 ```{r setup}
 library(tidyverse)
 library(gapminder)
