--- a/05-Tidy-Data.Rmd
+++ b/05-Tidy-Data.Rmd
@@ -3,6 +3,8 @@ title: "Tidy Data"
 output: html_notebook
 ---
 
+<!-- This file by RStudio is taken from https://github.com/rstudio/master-the-tidyverse and is licensed under a Creative Commons Attribution 4.0 International License. -->
+
 ```{r setup}
 library(tidyverse)
 
