add CC language to 07-rmarkdown files

--- a/07-rmarkdown/01_code-chunks.Rmd
+++ b/07-rmarkdown/01_code-chunks.Rmd
@@ -3,6 +3,8 @@ title: New Zealand
 output: html_document
 ---
 
+<!-- This file by Charlotte Wickham is licensed under a Creative Commons Attribution 4.0 International License. -->
+
 ```{r setup, include=FALSE}
 country_name <- "New Zealand"
 ```
