--- a/07-rmarkdown/04_yaml-header.Rmd
+++ b/07-rmarkdown/04_yaml-header.Rmd
@@ -5,6 +5,8 @@ output:
   html_document: default
 ---
 
+<!-- This file by Charlotte Wickham is licensed under a Creative Commons Attribution 4.0 International License. -->
+
 ```{r setup, include=FALSE}
 country_name <- "New Zealand"
 ```
