--- a/07-rmarkdown/05_nz-report.Rmd
+++ b/07-rmarkdown/05_nz-report.Rmd
@@ -6,6 +6,8 @@ output:
     df_print: paged
 ---
 
+<!-- This file by Charlotte Wickham is licensed under a Creative Commons Attribution 4.0 International License. -->
+
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = FALSE, message = FALSE)
 country_name <- "New Zealand"
