--- a/09-Iteration-listcols.Rmd
+++ b/09-Iteration-listcols.Rmd
@@ -3,6 +3,8 @@ title: "Iteration and List Columns"
 output: html_notebook
 ---
 
+<!-- This file by Charlotte Wickham is licensed under a Creative Commons Attribution 4.0 International License. -->
+
 ```{r setup}
 library(tidyverse)
 library(gapminder)
