adding note about updating tidyverse

--- a/syllabus.Rmd
+++ b/syllabus.Rmd
@@ -92,6 +92,12 @@ install.packages(c("tidyverse", "rmarkdown",
   "babynames", "nycflights13", "gapminder", "Lahman"))
 ```
 
+If you've installed the tidyverse before, re-installing it may not update all the component packages, in which case run,
+```{r, eval = FALSE}
+tidyverse::tidyverse_update()
+```
+to identify any out-of-date packages, and follow the instructions to update them.
+
 Don't forget to bring your power cable!  
 
 I'll also be providing some additional materials (slides, code and data) prior to our meeting, keep your eyes out for an email about that next week.
