--- a/README.Rmd
+++ b/README.Rmd
@@ -20,6 +20,12 @@ The repo currently reflects a 1.5 day version delivered July 2018.  If you are l
 
 **Solutions** to "Your Turns" available at [r_intro_bc_stats_solutions](https://github.com/cwickham/r_intro_bc_stats_solutions).
 
+To download these materials you can run:
+```{r, eval = FALSE}
+usethis::use_course("github.com/cwickham/r_intro_bc_stats/archive/master.zip")
+```
+
+
 ## License
 
 <a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a><br /><span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">Introduction to data science with the tidyverse</span> by <a xmlns:cc="http://creativecommons.org/ns#" href="https://github.com/cwickham/r_intro_bc_stats" property="cc:attributionName" rel="cc:attributionURL">Charlotte Wickham</a> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>. Based on a work at <a xmlns:dct="http://purl.org/dc/terms/" href="https://github.com/rstudio/master-the-tidyverse" rel="dct:source">https://github.com/rstudio/master-the-tidyverse</a>.
