--- a/01-Getting-started.Rmd
+++ b/01-Getting-started.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Getting Started with R and RStudio"
-output: html_notebook
+output: html_document
 ---
 
 <!-- This file by Charlotte Wickham is licensed under a Creative Commons Attribution 4.0 International License. -->
@@ -9,26 +9,32 @@ output: html_notebook
 library(tidyverse)
 ```
 
-## R Notebooks
+## R Markdown
 
-This is an [R Markdown](http://rmarkdown.rstudio.com) Notebook. When you execute code within the notebook, the results appear beneath the code. 
+This is an [R Markdown](http://rmarkdown.rstudio.com) file (it has a .Rmd file extension). When you execute code within the file, the results appear beneath the code. 
 
-R code goes in **code chunks**, denoted by three backticks. Try executing this chunk by clicking the *Run* button within the chunk or by placing your cursor inside it and pressing *Cmd/Crtl+Shift+Enter*. 
+R code goes in **code chunks**, denoted by three backticks. Try executing this chunk by clicking the *Run* button (a small green triangle) within the chunk or by placing your cursor inside it and pressing *Ctrl+Shift+Enter* (or *Cmd+Shift+Enter* on Mac). 
 
 ```{r}
 ggplot(data = mpg) +
-  geom_point(mapping = aes(x = displ, y = hwy))
+  geom_point(mapping = aes(x = cty, y = hwy), alpha = 0.2)
 ```
 
-Add a new code chunk by clicking the *Insert Chunk* button on the toolbar or by pressing *Cmd/Ctrl+Option+I*.
+## Add a new code chunk
+
+Add a new code chunk by clicking the *Insert Chunk* button on the toolbar or by pressing *Cmd/Ctrl+Option+I*. 
+
+Put 2 + 2 in your new code chunk and run it.
 
 ```{r}
 2 + 2
 ```
 
-When you save the notebook, an HTML file containing the code and output will be saved alongside it (click the *Preview* button or press *Cmd+Shift+K* to preview the HTML file). 
+## Knitting RMarkdown files
 
-The preview shows you a rendered HTML copy of the contents of the editor. Consequently, unlike *Knit*, *Preview* does not run any R code chunks. Instead, the output of the chunk when it was last run in the editor is displayed.
+We'll use RMarkdown files as notebooks as we learn because we can record text, code and output.  
+
+RMarkdown files are also a publication format.  Try hitting the "Knit" button in the toolbar above.  R runs all the code in the document from top to bottom, it collects the output and puts the code, text and output together in an HTML document - you should see it as 01-Getting-started.html in the Files pane.  This document is a great way to record or share your work (you can also Knit to PDF or Word documents).
 
 ## Assigning variables
 
