add instructions for use_course

--- a/README.Rmd
+++ b/README.Rmd
@@ -20,10 +20,19 @@ The repo currently reflects a 1.5 day version delivered July 2018.  If you are l
 
 **Solutions** to "Your Turns" available at [r_intro_bc_stats_solutions](https://github.com/cwickham/r_intro_bc_stats_solutions).
 
-To download these materials you can run:
+## Getting these materials
+
+To download these materials, open RStudio and on the Console run:
 ```{r, eval = FALSE}
-usethis::use_course("github.com/cwickham/r_intro_bc_stats/archive/master.zip")
+usethis::use_course("bit.ly/rintro-bc")
 ```
+
+After a pause, you'll be asked a few questions about the download process. The materials will be downloaded, unzipped and a new RStudio session will open.  
+
+You only need to do this once.  If you close RStudio, and want to pick it up again later (i.e. on the day of the training):
+
+* Navigate to where the folder was downloaded (if you used the default settings this should be a folder called "r_intro_bc_stats-master" on your **Desktop**)
+* Double-click the file "r_intro_bc_stats.Rproj" to open up RStudio
 
 
 ## License
