--- a/syllabus.Rmd
+++ b/syllabus.Rmd
@@ -85,6 +85,21 @@ Don't forget to bring your power cable!
 
 I'll also be providing some additional materials (slides, code and data) prior to our meeting, keep your eyes out for an email about soon.
 
+## Getting the materials
+
+To download the materials, open RStudio and on the Console run:
+```{r, eval = FALSE}
+usethis::use_course("bit.ly/rintro-bc")
+```
+
+After a pause, you'll be asked a few questions about the download process. The materials will be downloaded, unzipped and a new RStudio session will open.  
+
+You only need to do this once.  If you close RStudio, and want to pick it up again later (i.e. on the day of the training):
+
+1. Navigate to where the folder was downloaded (this should be a folder called `r_intro_bc_stats-master` on your **Desktop**)
+2. Double-click the file `r_intro_bc_stats.Rproj` to open up RStudio
+
+
 ## Instructor Info
 
 Charlotte Wickham 
