adding cloud info to old version

--- a/syllabus.Rmd
+++ b/syllabus.Rmd
@@ -99,6 +99,11 @@ You only need to do this once.  If you close RStudio, and want to pick it up aga
 1. Navigate to where the folder was downloaded (this should be a folder called `r_intro_bc_stats-master` on your **Desktop**)
 2. Double-click the file `r_intro_bc_stats.Rproj` to open up RStudio
 
+## rstudio.cloud
+
+If you have a good internet connection, an alternative to installing the pacakges, and getting the materials, locally is to use  https://rstudio.cloud/project/49127
+
+You may need to sign up for an account (free) first.
 
 ## Instructor Info
 
